# summa-paper

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  prompts.py
app/fetcher/: arxiv_fetcher.py
app/processor/: paper_processor.py
app/services/: feishu_service.py  llm_service.py  oss_service.py
app/utils/: http_utils.py  logger.py  storage.py
