[project]
name = "summa-paper"
version = "0.1.0"
description = "Arxiv Daily Paper Summary Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.11",
    "arxiv>=2.1.3",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "apscheduler>=3.11.2",
    "pytz>=2025.2",
    "oss2>=2.19.1",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
